--- a/sass/modules/about-us/_about-us-area.scss
+++ b/sass/modules/about-us/_about-us-area.scss
@@ -156,6 +156,9 @@
         writing-mode: vertical-rl;
         margin-bottom: 30px;
         width: 80px;
+        @include sm{
+            margin-bottom: 20px;
+        }
         h2 {
             text-align: start;
             color: $gray;
