--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -384,6 +384,7 @@
           @include sm {
             width: 100%;
             margin-top: 0;
+            margin-bottom: 0;
           }
         }
         .slider-btn-wrapper {
